Fix spacing and image size on merch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -788,7 +788,36 @@ blockquote::after {
 	}
 }
 
-@media screen and (max-width: 1188px) {
+/* Shop Page Merch Images */
+@media screen and (max-width: 1755px) {
+	.column {
+		float: none;
+  		width: 100%;
+		text-align: center;
+		line-height:150%;
+		padding: 50px 0;
+	}
+
+	.row {
+		padding: 50px 0;
+	}
+
+	.zazzle-image {
+		width: 30vw;
+	}
+}
+
+@media screen and (max-width: 1530px) {
+	.zazzle-image {
+		width: 40vw;
+	}
+}
+
+@media screen and (max-width: 915px) {
+	.zazzle-image {
+		width: 60vw;
+	}
+
 	.column {
 		float: none;
   		width: 100%;
@@ -797,12 +826,14 @@ blockquote::after {
 		padding: 20px 0;
 	}
 
-	.zazzle-image {
-		width: 70vw;
+	.row {
+		padding: 20px 0;
 	}
+}
+
 
 /* 	Page title image and text for news, shop, quiz & history */
-	
+@media screen and (max-width: 1188px) {
 	.title-text {
 		position: static;
 		margin: 0 auto;
@@ -835,7 +866,6 @@ blockquote::after {
 	#history-title-text, #egg-quiz-title-text, #news-title-text, #shop-title-text {
 		margin-left: 0;
 	}
-
 }
 
 /* For tablet view of News Page*/
